--- a/package.json
+++ b/package.json
@@ -17,4 +17,49 @@
         "url": "https://github.com/owdver/Ob-TvFiles/issues"
     },
     "homepage": "https://github.com/owdver/Ob-TvFiles#readme"
-}
+    },
+    "buildpacks": [
+        
+
+
+
+      "url": "heroku/python"
+
+    }
+
+  ],
+
+  "formation": {
+
+    "worker": {
+
+      "quantity": 1,
+
+      "size": "eco"
+
+    }
+
+  }
+    
+
+"buildpacks": [
+
+    {
+
+      "url": "heroku/python"
+
+    }
+
+  ],
+
+  "formation": {
+
+    "worker": {
+
+      "quantity": 1,
+
+      "size": "eco"
+
+    }
+
+  }
