--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 
     "scripts": {
 
-        "build": "python",
+        "build": "tsc",
 
         "test": "echo \"No test specified\" && exit 1",
 
